Added tests for functional dependency checking